--- a/docs/examples/Creating Simulated PyVISA Instruments.ipynb
+++ b/docs/examples/Creating Simulated PyVISA Instruments.ipynb
@@ -147,8 +147,7 @@
     "\n",
     "wein_sim = Weinschel_8320('wein_sim',\n",
     "                          address='GPIB::1::65535::INSTR',  # This matches the address in the .yaml file\n",
-    "                          visalib=visalib,\n",
-    "                          device_clear=False  # This line is important to remember for simulated instr.s\n",
+    "                          visalib=visalib\n",
     "                          )"
    ]
   },
@@ -186,8 +185,7 @@
     "def driver():\n",
     "    wein_sim = Weinschel_8320('wein_sim',\n",
     "                              address='GPIB::1::65535::INSTR',  \n",
-    "                              visalib=visalib,\n",
-    "                              device_clear=False\n",
+    "                              visalib=visalib\n",
     "                              )\n",
     "    yield wein_sim\n",
     "    \n",
@@ -316,8 +314,7 @@
     "def driver():\n",
     "    wein_sim = Weinschel_8320('wein_sim',\n",
     "                              address='GPIB::1::65535::INSTR',  \n",
-    "                              visalib=visalib,\n",
-    "                              device_clear=False\n",
+    "                              visalib=visalib\n",
     "                              )\n",
     "    yield wein_sim\n",
     "    \n",
@@ -371,15 +368,6 @@
    "source": [
     "## That's it!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
