--- a/docs/examples/driver_examples/Qcodes example with Yokogawa GS2xx.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Yokogawa GS2xx.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Qcodes example with Yokogawa"
+    "# Qcodes example with Yokogawa GS200/GS210"
    ]
   },
   {
