feature: don't write .seqx files to disk, keep them in memory

--- a/docs/examples/benchmarking/Benchmark of waveform upload to AWG70002A.ipynb
+++ b/docs/examples/benchmarking/Benchmark of waveform upload to AWG70002A.ipynb
@@ -175,17 +175,12 @@
     "# ...and then we may build the .seqx file.\n",
     "# We put the waveforms on one channel\n",
     "\n",
-    "awg.makeSEQXFile(trig_waits,\n",
-    "                 nreps,\n",
-    "                 event_jumps,\n",
-    "                 event_jump_to,\n",
-    "                 go_to,\n",
-    "                 [wfmx_files, wfmx_files])\n",
-    "\n",
-    "# the above function writes to disk. When time allows, we'll change that into a file stream\n",
-    "with open('myzip.seqx', 'rb') as f:\n",
-    "    lines = f.readlines()\n",
-    "seqx_file = b''.join(lines)"
+    "seqx_file = awg.makeSEQXFile(trig_waits,\n",
+    "                             nreps,\n",
+    "                             event_jumps,\n",
+    "                             event_jump_to,\n",
+    "                             go_to,\n",
+    "                             [wfmx_files, wfmx_files])"
    ]
   },
   {
