--- a/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.08s\n"
+      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.16s\n"
      ]
     }
    ],
    "source": [
-    "awg = AWG70002A('awg', 'TCPIP0::172.20.2.101::inst0::INSTR', terminator='\\n')"
+    "awg = AWG70002A('awg', 'TCPIP0::172.20.2.243::inst0::INSTR', terminator='\\n')"
    ]
   },
   {
@@ -55,15 +55,19 @@
      "output_type": "stream",
      "text": [
       "awg:\n",
-      "\tparameter        value\n",
+      "\tparameter               value\n",
       "--------------------------------------------------------------------------------\n",
-      "IDN               :\t{'model': 'AWG70002A', 'vendor': 'TEKTRONIX', 'serial': '...\n",
-      "current_directory :\t\"\\Users\\OEM\\Documents\" \n",
-      "mode              :\tAWG \n",
-      "timeout           :\t10 (s)\n",
+      "IDN                      :\t{'vendor': 'TEKTRONIX', 'model': 'AWG70002A', 'fir...\n",
+      "clock_external_frequency :\t6.25e+09 (Hz)\n",
+      "clock_source             :\tInternal \n",
+      "current_directory        :\t\"\\Users\\OEM\\Documents\" \n",
+      "mode                     :\tAWG \n",
+      "sample_rate              :\t1e+09 (Sa/s)\n",
+      "timeout                  :\t10 (s)\n",
       "awg_ch1:\n",
       "\tparameter      value\n",
       "--------------------------------------------------------------------------------\n",
+      "awg_amplitude   :\t0.3 (V)\n",
       "fgen_amplitude  :\t0.074 (V)\n",
       "fgen_dclevel    :\t0 (V)\n",
       "fgen_frequency  :\t1e+07 (Hz)\n",
@@ -74,10 +78,11 @@
       "fgen_symmetry   :\t50 (%)\n",
       "fgen_type       :\tEXPONENTIALDECAY \n",
       "resolution      :\t8 \n",
-      "state           :\t0 \n",
+      "state           :\t1 \n",
       "awg_ch2:\n",
       "\tparameter      value\n",
       "--------------------------------------------------------------------------------\n",
+      "awg_amplitude   :\t0.3 (V)\n",
       "fgen_amplitude  :\t0.5 (V)\n",
       "fgen_dclevel    :\t0 (V)\n",
       "fgen_frequency  :\t1e+07 (Hz)\n",
@@ -86,9 +91,9 @@
       "fgen_phase      :\t0 (degrees)\n",
       "fgen_signalpath :\tdirect \n",
       "fgen_symmetry   :\t50 (%)\n",
-      "fgen_type       :\tSINE \n",
-      "resolution      :\t10 \n",
-      "state           :\t0 \n"
+      "fgen_type       :\tTRIANGLE \n",
+      "resolution      :\t8 \n",
+      "state           :\t1 \n"
      ]
     }
    ],
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -208,16 +213,19 @@
     "\n",
     "N = 50000  # minimal length allowed is 2400 points\n",
     "\n",
-    "mysine = np.sin(10*2*np.pi*np.linspace(0, 1, N))\n",
     "m1 = np.concatenate((np.ones(int(N/2)), np.zeros(int(N/2))))\n",
-    "m2 = np.concatenate((np.zeros(int(N/2)), np.zeros(int(N/2))))\n",
+    "m2 = np.concatenate((np.zeros(int(N/2)), np.ones(int(N/2))))\n",
+    "\n",
+    "ramp = 0.075*np.linspace(0, 1, N)\n",
+    "\n",
+    "mysine = 0.1*np.sin(10*2*np.pi*np.linspace(0, 1, N)) + ramp\n",
     "\n",
     "data = np.array([mysine, m1, m2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -226,24 +234,24 @@
     "# The .wfmx file needs a name in the memory of the instrument\n",
     "# The name of the waveform in the waveform list is that same name\n",
     "# with no .wfmx extension\n",
-    "filename = 'examplewaveform.wfmx'"
+    "filename = 'examplewaveform1.wfmx'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# now compile the binary file\n",
-    "wfmx_file = awg.makeWFMXFile(data)"
+    "wfmx_file = awg.makeWFMXFile(data, 0.350)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -264,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "['examplewaveform']"
+       "['examplewaveform1']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -317,6 +325,144 @@
     "\n",
     "# and disable the channel\n",
     "awg.ch1.state(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "awg.ch2.setWaveform(filename.replace('.wfmx', ''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "awg.ch2.state(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making and sending sequences\n",
+    "\n",
+    "Sequences are much better off being generated using the broadbean module, but for now let's reduce the number of moving parts and compose a little sequence by hand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# set the instrument in awg mode\n",
+    "awg.mode('AWG')\n",
+    "# set the resolution to 8 bits plus two markers\n",
+    "awg.ch1.resolution(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's make a sequence where a sine plays on one channel while the other channel ramps\n",
+    "# and then the roles reverse\n",
+    "\n",
+    "# As a preparation, let's set both channels to 300 mV peak-to-peak\n",
+    "awg.ch1.awg_amplitude(0.3)\n",
+    "awg.ch2.awg_amplitude(0.3)\n",
+    "\n",
+    "N = 20000  # minimally 2400\n",
+    "\n",
+    "SR = 1e9\n",
+    "awg.sample_rate(SR)  # set the sample rate on the instrument\n",
+    "ramp_target = 0.1  # ramp target (V)\n",
+    "\n",
+    "time = np.linspace(0, N/SR, N)\n",
+    "sinesignal = 0.15*np.sin(SR/N*2*np.pi*time)\n",
+    "m1 = np.concatenate((np.ones(int(N/2)), np.zeros(int(N/2))))\n",
+    "m2 = np.concatenate((np.zeros(int(N/2)), np.zeros(int(N/2))))\n",
+    "rampsignal = np.linspace(0, ramp_target, N)\n",
+    "\n",
+    "# Then we compose and upload a .seqx file in 6 steps\n",
+    "\n",
+    "# Step 1: cast the waveform data into the .wfmx format\n",
+    "# To make a .wfmx, we need to know the amplitude of the output channel\n",
+    "ch1_amp = awg.ch1.awg_amplitude()\n",
+    "ch2_amp = awg.ch2.awg_amplitude()\n",
+    "\n",
+    "wfm_ch1_n1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
+    "wfm_ch1_n2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
+    "wfm_ch2_n1 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch2_amp)\n",
+    "wfm_ch2_n2 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch2_amp)\n",
+    "\n",
+    "# Step 2: decide on sequencing information\n",
+    "# This information is provided as lists of the same length as the \n",
+    "# sequence\n",
+    "trig_waits = [0, 0]  # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
+    "nreps = [2, 3]  # 0 corresponds to infinite\n",
+    "event_jumps = [0, 0] # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
+    "event_jump_to = [0, 0]  # irrelevant if event-jump is 0, else the sequence pos. to jump to\n",
+    "go_to = [0, 1]  # 0 means next\n",
+    "\n",
+    "# Step 3: make the .seqx file\n",
+    "seqx = awg.makeSEQXFile(trig_waits,\n",
+    "                        nreps,\n",
+    "                        event_jumps,\n",
+    "                        event_jump_to,\n",
+    "                        go_to, [[wfm_ch1_n1, wfm_ch1_n2], [wfm_ch2_n1, wfm_ch2_n2]])\n",
+    "\n",
+    "# Step 4: Transfer the seqx file\n",
+    "awg.sendSEQXFile(seqx, 'thursday.seqx')\n",
+    "\n",
+    "# Step 5: Load the seqx file\n",
+    "awg.loadSEQXFile('thursday.seqx')\n",
+    "# Now the sequence should appear in the sequencelist, but it is not yet assigned to channels\n",
+    "\n",
+    "# Step 6: Assign tracks from the sequence to the channels\n",
+    "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
+    "awg.ch1.setSequenceTrack('Sequence', 1)\n",
+    "awg.ch2.setSequenceTrack('Sequence', 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Now play it!\n",
+    "awg.ch1.state(1)\n",
+    "awg.ch2.state(1)\n",
+    "awg.play()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "awg.stop()"
    ]
   },
   {
