--- a/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.16s\n"
+      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.12s\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
       "awg:\n",
       "\tparameter               value\n",
       "--------------------------------------------------------------------------------\n",
-      "IDN                      :\t{'vendor': 'TEKTRONIX', 'model': 'AWG70002A', 'fir...\n",
+      "IDN                      :\t{'vendor': 'TEKTRONIX', 'model': 'AWG70002A', 'ser...\n",
       "clock_external_frequency :\t6.25e+09 (Hz)\n",
       "clock_source             :\tInternal \n",
       "current_directory        :\t\"\\Users\\OEM\\Documents\" \n",
@@ -78,7 +78,7 @@
       "fgen_symmetry   :\t50 (%)\n",
       "fgen_type       :\tEXPONENTIALDECAY \n",
       "resolution      :\t8 \n",
-      "state           :\t1 \n",
+      "state           :\t0 \n",
       "awg_ch2:\n",
       "\tparameter      value\n",
       "--------------------------------------------------------------------------------\n",
@@ -93,7 +93,7 @@
       "fgen_symmetry   :\t50 (%)\n",
       "fgen_type       :\tTRIANGLE \n",
       "resolution      :\t8 \n",
-      "state           :\t1 \n"
+      "state           :\t0 \n"
      ]
     }
    ],
@@ -421,11 +421,16 @@
     "go_to = [0, 1]  # 0 means next\n",
     "\n",
     "# Step 3: make the .seqx file\n",
+    "# The sequence must be given a name\n",
+    "\n",
+    "seqname = 'tutorial_sequence'\n",
+    "\n",
     "seqx = awg.makeSEQXFile(trig_waits,\n",
     "                        nreps,\n",
     "                        event_jumps,\n",
     "                        event_jump_to,\n",
-    "                        go_to, [[wfm_ch1_n1, wfm_ch1_n2], [wfm_ch2_n1, wfm_ch2_n2]])\n",
+    "                        go_to, [[wfm_ch1_n1, wfm_ch1_n2], [wfm_ch2_n1, wfm_ch2_n2]],\n",
+    "                        seqname)\n",
     "\n",
     "# Step 4: Transfer the seqx file\n",
     "awg.sendSEQXFile(seqx, 'thursday.seqx')\n",
@@ -436,13 +441,13 @@
     "\n",
     "# Step 6: Assign tracks from the sequence to the channels\n",
     "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
-    "awg.ch1.setSequenceTrack('Sequence', 1)\n",
-    "awg.ch2.setSequenceTrack('Sequence', 2)"
+    "awg.ch1.setSequenceTrack(seqname, 1)\n",
+    "awg.ch2.setSequenceTrack(seqname, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -475,6 +480,196 @@
    "source": [
     "# Finally irreversibly tear down the instrument\n",
     "awg.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trying stuff that doesn't work\n",
+    "\n",
+    "## 1: only a single channel specified *DOES WORK*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# clear the sequence list and waveform list (NOT ALWAYS A GOOD IDEA! BE CAREFUL!)\n",
+    "awg.clearSequenceList()\n",
+    "awg.clearWaveformList()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "awg.ch1.awg_amplitude(0.3)\n",
+    "\n",
+    "\n",
+    "N = 20000  # minimally 2400\n",
+    "\n",
+    "SR = 1e9\n",
+    "awg.sample_rate(SR)  # set the sample rate on the instrument\n",
+    "ramp_target = 0.1  # ramp target (V)\n",
+    "\n",
+    "time = np.linspace(0, N/SR, N)\n",
+    "sinesignal = 0.15*np.sin(SR/N*2*np.pi*time)\n",
+    "m1 = np.concatenate((np.ones(int(N/2)), np.zeros(int(N/2))))\n",
+    "m2 = np.concatenate((np.zeros(int(N/2)), np.zeros(int(N/2))))\n",
+    "rampsignal = np.linspace(0, ramp_target, N)\n",
+    "\n",
+    "# Then we compose and upload a .seqx file in 6 steps\n",
+    "\n",
+    "# Step 1: cast the waveform data into the .wfmx format\n",
+    "# To make a .wfmx, we need to know the amplitude of the output channel\n",
+    "ch1_amp = awg.ch1.awg_amplitude()\n",
+    "\n",
+    "wfm_ch1_n1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
+    "wfm_ch1_n2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
+    "\n",
+    "# Step 2: decide on sequencing information\n",
+    "# This information is provided as lists of the same length as the \n",
+    "# sequence\n",
+    "trig_waits = [0, 0]  # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
+    "nreps = [2, 3]  # 0 corresponds to infinite\n",
+    "event_jumps = [0, 0] # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
+    "event_jump_to = [0, 0]  # irrelevant if event-jump is 0, else the sequence pos. to jump to\n",
+    "go_to = [0, 1]  # 0 means next\n",
+    "\n",
+    "# Step 3: make the .seqx file\n",
+    "# The sequence must be given a name\n",
+    "\n",
+    "seqname = 'single_channel_sequence'\n",
+    "\n",
+    "seqx = awg.makeSEQXFile(trig_waits,\n",
+    "                        nreps,\n",
+    "                        event_jumps,\n",
+    "                        event_jump_to,\n",
+    "                        go_to, [[wfm_ch1_n1, wfm_ch1_n2]],\n",
+    "                        seqname)\n",
+    "\n",
+    "# Step 4: Transfer the seqx file\n",
+    "awg.sendSEQXFile(seqx, 'singlechannel.seqx')\n",
+    "\n",
+    "# Step 5: Load the seqx file\n",
+    "awg.loadSEQXFile('singlechannel.seqx')\n",
+    "# Now the sequence should appear in the sequencelist, but it is not yet assigned to channels\n",
+    "\n",
+    "# Step 6: Assign tracks from the sequence to the channels\n",
+    "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
+    "awg.ch1.setSequenceTrack(seqname, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2: More than 10 waveforms crash stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "awg.ch1.awg_amplitude(0.3)\n",
+    "\n",
+    "\n",
+    "N = 20000  # minimally 2400\n",
+    "\n",
+    "SR = 1e9\n",
+    "awg.sample_rate(SR)  # set the sample rate on the instrument\n",
+    "ramp_target = 0.1  # ramp target (V)\n",
+    "\n",
+    "time = np.linspace(0, N/SR, N)\n",
+    "sinesignal = 0.15*np.sin(SR/N*2*np.pi*time)\n",
+    "m1 = np.concatenate((np.ones(int(N/2)), np.zeros(int(N/2))))\n",
+    "m2 = np.concatenate((np.zeros(int(N/2)), np.zeros(int(N/2))))\n",
+    "rampsignal = np.linspace(0, ramp_target, N)\n",
+    "\n",
+    "# Then we compose and upload a .seqx file in 6 steps\n",
+    "\n",
+    "# Step 1: cast the waveform data into the .wfmx format\n",
+    "# To make a .wfmx, we need to know the amplitude of the output channel\n",
+    "ch1_amp = awg.ch1.awg_amplitude()\n",
+    "\n",
+    "no_of_waveforms = 11\n",
+    "\n",
+    "wfm1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
+    "wfm2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
+    "\n",
+    "# Step 2: decide on sequencing information\n",
+    "# This information is provided as lists of the same length as the \n",
+    "# sequence\n",
+    "trig_waits = [0]*no_of_waveforms  # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
+    "nreps = [1]*no_of_waveforms  # 0 corresponds to infinite\n",
+    "event_jumps = [0]*no_of_waveforms # 0: off, 1: trigA, 2: trigB, 3: EXT\n",
+    "event_jump_to = [0]*no_of_waveforms  # irrelevant if event-jump is 0, else the sequence pos. to jump to\n",
+    "go_to = [0]*no_of_waveforms  # 0 means next\n",
+    "\n",
+    "wfmxs = [[wfm1]*no_of_waveforms, [wfm2]*no_of_waveforms]\n",
+    "\n",
+    "# Step 3: make the .seqx file\n",
+    "# The sequence must be given a name\n",
+    "\n",
+    "seqname = 'big_sequence_{}'.format(no_of_waveforms)\n",
+    "\n",
+    "seqx = awg.makeSEQXFile(trig_waits,\n",
+    "                        nreps,\n",
+    "                        event_jumps,\n",
+    "                        event_jump_to,\n",
+    "                        go_to, wfmxs,\n",
+    "                        seqname)\n",
+    "\n",
+    "# Step 4: Transfer the seqx file\n",
+    "awg.sendSEQXFile(seqx, 'bigsequence{}.seqx'.format(no_of_waveforms))\n",
+    "\n",
+    "# Step 5: Load the seqx file\n",
+    "awg.loadSEQXFile('bigsequence{}.seqx'.format(no_of_waveforms))\n",
+    "# Now the sequence should appear in the sequencelist, but it is not yet assigned to channels\n",
+    "\n",
+    "# Step 6: Assign tracks from the sequence to the channels\n",
+    "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
+    "awg.ch1.setSequenceTrack(seqname, 1)\n",
+    "\n",
+    "with open('bigsequence{}.seqx'.format(no_of_waveforms), 'wb') as fid:\n",
+    "    fid.write(seqx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1/.25"
    ]
   },
   {
