docs: change call signature in the example

--- a/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.12s\n"
+      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.61s\n"
      ]
     }
    ],
    "source": [
-    "awg = AWG70002A('awg', 'TCPIP0::172.20.2.243::inst0::INSTR', terminator='\\n')"
+    "awg = AWG70002A('awg', 'TCPIP0::172.20.2.243::inst0::INSTR')"
    ]
   },
   {
@@ -71,12 +71,12 @@
       "fgen_amplitude  :\t0.074 (V)\n",
       "fgen_dclevel    :\t0 (V)\n",
       "fgen_frequency  :\t1e+07 (Hz)\n",
-      "fgen_offset     :\t0.12 (V)\n",
+      "fgen_offset     :\t0 (V)\n",
       "fgen_period     :\t1e-07 (s)\n",
-      "fgen_phase      :\t25 (degrees)\n",
+      "fgen_phase      :\t0 (degrees)\n",
       "fgen_signalpath :\tdirect \n",
       "fgen_symmetry   :\t50 (%)\n",
-      "fgen_type       :\tEXPONENTIALDECAY \n",
+      "fgen_type       :\tNone \n",
       "resolution      :\t8 \n",
       "state           :\t0 \n",
       "awg_ch2:\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -374,12 +374,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "\n",
     "# Let's make a sequence where a sine plays on one channel while the other channel ramps\n",
     "# and then the roles reverse\n",
     "\n",
@@ -406,10 +407,16 @@
     "ch1_amp = awg.ch1.awg_amplitude()\n",
     "ch2_amp = awg.ch2.awg_amplitude()\n",
     "\n",
-    "wfm_ch1_n1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
-    "wfm_ch1_n2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
-    "wfm_ch2_n1 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch2_amp)\n",
-    "wfm_ch2_n2 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch2_amp)\n",
+    "#wfm_ch1_n1 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch1_amp)\n",
+    "#wfm_ch1_n2 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch1_amp)\n",
+    "#wfm_ch2_n1 = awg.makeWFMXFile(np.array([rampsignal, m1, m2]), ch2_amp)\n",
+    "#wfm_ch2_n2 = awg.makeWFMXFile(np.array([sinesignal, m1, m2]), ch2_amp)\n",
+    "\n",
+    "\n",
+    "wfm_ch1_n1 = np.array([sinesignal, m1, m2])\n",
+    "wfm_ch1_n2 = np.array([rampsignal, m1, m2])\n",
+    "wfm_ch2_n1 = np.array([rampsignal, m1, m2])\n",
+    "wfm_ch2_n2 = np.array([sinesignal, m1, m2])\n",
     "\n",
     "# Step 2: decide on sequencing information\n",
     "# This information is provided as lists of the same length as the \n",
@@ -425,11 +432,15 @@
     "\n",
     "seqname = 'tutorial_sequence'\n",
     "\n",
+    "wfms = [[wfm_ch1_n1, wfm_ch1_n2], [wfm_ch2_n1, wfm_ch2_n2]]\n",
+    "\n",
     "seqx = awg.makeSEQXFile(trig_waits,\n",
     "                        nreps,\n",
     "                        event_jumps,\n",
     "                        event_jump_to,\n",
-    "                        go_to, [[wfm_ch1_n1, wfm_ch1_n2], [wfm_ch2_n1, wfm_ch2_n2]],\n",
+    "                        go_to,\n",
+    "                        wfms,\n",
+    "                        [ch1_amp, ch2_amp],\n",
     "                        seqname)\n",
     "\n",
     "# Step 4: Transfer the seqx file\n",
@@ -443,6 +454,73 @@
     "# Unlike older/other AWG models, this can be done on a per-channel basis\n",
     "awg.ch1.setSequenceTrack(seqname, 1)\n",
     "awg.ch2.setSequenceTrack(seqname, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2, 3, 20000)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(wfms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([[array([[  0.00000000e+00,   4.71262453e-05,   9.42524860e-05, ...,\n",
+       "            -9.42524860e-05,  -4.71262453e-05,  -3.67394040e-17],\n",
+       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]]),\n",
+       "   array([[  0.00000000e+00,   5.00025001e-06,   1.00005000e-05, ...,\n",
+       "             9.99899995e-02,   9.99949997e-02,   1.00000000e-01],\n",
+       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]])],\n",
+       "  [array([[  0.00000000e+00,   5.00025001e-06,   1.00005000e-05, ...,\n",
+       "             9.99899995e-02,   9.99949997e-02,   1.00000000e-01],\n",
+       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]]),\n",
+       "   array([[  0.00000000e+00,   4.71262453e-05,   9.42524860e-05, ...,\n",
+       "            -9.42524860e-05,  -4.71262453e-05,  -3.67394040e-17],\n",
+       "          [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
+       "          [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00, ...,\n",
+       "             0.00000000e+00,   0.00000000e+00,   0.00000000e+00]])]],)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wfms"
    ]
   },
   {
@@ -670,6 +748,77 @@
    ],
    "source": [
     "0.1/.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Bob:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self._name = None\n",
+    "    \n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        return self._name\n",
+    "    \n",
+    "    @name.setter\n",
+    "    def name(self, newname):\n",
+    "        if not isinstance(newname, str):\n",
+    "            raise ValueError('name must be a string')\n",
+    "        self._name = newname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "bob = Bob()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bob.name = 'p'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "name must be a string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-609b5fb054ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-18-5f1f7d8df386>\u001b[0m in \u001b[0;36mname\u001b[0;34m(self, newname)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name must be a string'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnewname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: name must be a string"
+     ]
+    }
+   ],
+   "source": [
+    "bob.name = None"
    ]
   },
   {
