refactor: use print_readable_snapshot update=True
Remove loop getting all parameters from instrument and submodules.
Use update=True in print_readable_snapshot instead.

--- a/docs/examples/driver_examples/Qcodes example with Attocube ANC300.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Attocube ANC300.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,21 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for param in list(piezo_ctrl.parameters.values()):\n",
-    "        piezo_ctrl.get(param.name)\n",
-    "        \n",
-    "for axis in list(piezo_ctrl.submodules.values()):\n",
-    "    for param in list(axis.parameters.values()):\n",
-    "        axis.get(param.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -185,7 +171,7 @@
     }
    ],
    "source": [
-    "piezo_ctrl.print_readable_snapshot()"
+    "piezo_ctrl.print_readable_snapshot(update=True)"
    ]
   },
   {
@@ -197,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
