clean up example notebook

--- a/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
+++ b/docs/examples/driver_examples/Qcodes example with Tektronix AWG70002A.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.61s\n"
+      "Connected to: TEKTRONIX AWG70002A (serial:B020397, firmware:FV:5.3.0128.0) in 0.54s\n"
      ]
     }
    ],
@@ -57,43 +57,55 @@
       "awg:\n",
       "\tparameter               value\n",
       "--------------------------------------------------------------------------------\n",
-      "IDN                      :\t{'serial': 'B020397', 'model': 'AWG70002A', 'firmw...\n",
+      "IDN                      :\t{'firmware': 'FV:5.3.0128.0', 'model': 'AWG70002A'...\n",
       "clock_external_frequency :\t6.25e+09 (Hz)\n",
       "clock_source             :\tInternal \n",
       "current_directory        :\t\"\\Users\\OEM\\Documents\" \n",
       "mode                     :\tAWG \n",
-      "sample_rate              :\t1e+10 (Sa/s)\n",
+      "sample_rate              :\t2.5e+10 (Sa/s)\n",
       "timeout                  :\t10 (s)\n",
-      "awg_ch2:\n",
-      "\tparameter      value\n",
-      "--------------------------------------------------------------------------------\n",
-      "awg_amplitude   :\t0.3 (V)\n",
-      "fgen_amplitude  :\t0.5 (V)\n",
-      "fgen_dclevel    :\t0 (V)\n",
-      "fgen_frequency  :\t4.38e+09 (Hz)\n",
-      "fgen_offset     :\t0 (V)\n",
-      "fgen_period     :\t2.2831e-10 (s)\n",
-      "fgen_phase      :\t0 (degrees)\n",
-      "fgen_signalpath :\tdirect \n",
-      "fgen_symmetry   :\t50 (%)\n",
-      "fgen_type       :\tTRIANGLE \n",
-      "resolution      :\t8 \n",
-      "state           :\t0 \n",
       "awg_ch1:\n",
-      "\tparameter      value\n",
+      "\tparameter        value\n",
       "--------------------------------------------------------------------------------\n",
-      "awg_amplitude   :\t0.25 (V)\n",
-      "fgen_amplitude  :\t0.074 (V)\n",
-      "fgen_dclevel    :\t0 (V)\n",
-      "fgen_frequency  :\t4.38e+09 (Hz)\n",
-      "fgen_offset     :\t0 (V)\n",
-      "fgen_period     :\t2.2831e-10 (s)\n",
-      "fgen_phase      :\t0 (degrees)\n",
-      "fgen_signalpath :\tdirect \n",
-      "fgen_symmetry   :\t50 (%)\n",
-      "fgen_type       :\tSQUARE \n",
-      "resolution      :\t8 \n",
-      "state           :\t1 \n"
+      "awg_amplitude     :\t0.5 (V)\n",
+      "fgen_amplitude    :\t0.074 (V)\n",
+      "fgen_dclevel      :\t0 (V)\n",
+      "fgen_frequency    :\t1e+07 (Hz)\n",
+      "fgen_offset       :\t0.12 (V)\n",
+      "fgen_period       :\t1e-07 (s)\n",
+      "fgen_phase        :\t25 (degrees)\n",
+      "fgen_signalpath   :\tdirect \n",
+      "fgen_symmetry     :\t50 (%)\n",
+      "fgen_type         :\tEXPONENTIALDECAY \n",
+      "marker1_high      :\t0.1 (V)\n",
+      "marker1_low       :\t-0.4 (V)\n",
+      "marker1_waitvalue :\tHIGH \n",
+      "marker2_high      :\t0.1 (V)\n",
+      "marker2_low       :\t-0.4 (V)\n",
+      "marker2_waitvalue :\tHIGH \n",
+      "resolution        :\t8 \n",
+      "state             :\t1 \n",
+      "awg_ch2:\n",
+      "\tparameter        value\n",
+      "--------------------------------------------------------------------------------\n",
+      "awg_amplitude     :\t0.3 (V)\n",
+      "fgen_amplitude    :\t0.5 (V)\n",
+      "fgen_dclevel      :\t0 (V)\n",
+      "fgen_frequency    :\t1e+07 (Hz)\n",
+      "fgen_offset       :\t0 (V)\n",
+      "fgen_period       :\t1e-07 (s)\n",
+      "fgen_phase        :\t0 (degrees)\n",
+      "fgen_signalpath   :\tdirect \n",
+      "fgen_symmetry     :\t50 (%)\n",
+      "fgen_type         :\tTRIANGLE \n",
+      "marker1_high      :\t1.4 (V)\n",
+      "marker1_low       :\t0 (V)\n",
+      "marker1_waitvalue :\tLOW \n",
+      "marker2_high      :\t1 (V)\n",
+      "marker2_low       :\t0 (V)\n",
+      "marker2_waitvalue :\tLOW \n",
+      "resolution        :\t8 \n",
+      "state             :\t0 \n"
      ]
     }
    ],
