--- a/docs/examples/Guide to the parameter node.ipynb
+++ b/docs/examples/Guide to the parameter node.ipynb
@@ -35,12 +35,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParameterNode parameter_node containing 0 parameters, 0 nodes"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "parameter_node = ParameterNode('parameter_node')"
+    "parameter_node = ParameterNode('parameter_node')\n",
+    "parameter_node"
    ]
   },
   {
@@ -59,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "{'new_parameter': <qcodes.instrument.parameter.Parameter: new_parameter at 2737490599216>}"
+       "{'new_parameter': <qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>}"
       ]
      },
      "execution_count": 3,
@@ -144,15 +154,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:new_parameter:parameter set to 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "parameter_node.new_parameter = 42"
    ]
@@ -216,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "<qcodes.instrument.parameter.Parameter: new_parameter at 2737490599216>"
+       "<qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>"
       ]
      },
      "execution_count": 8,
@@ -243,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "<qcodes.instrument.parameter.Parameter: new_parameter at 2737490599216>"
+       "<qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>"
       ]
      },
      "execution_count": 9,
@@ -279,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "<qcodes.instrument.parameter.Parameter: new_parameter at 2737490599216>"
+       "<qcodes.instrument.parameter.Parameter: new_parameter at 1794281552864>"
       ]
      },
      "execution_count": 10,
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +318,7 @@
        "ParameterNode parameter_node containing 1 parameters, 1 nodes"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
        "ParameterNode nested_parameter_node containing 0 parameters, 0 nodes"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +367,7 @@
        "ParameterNode nested_parameter_node containing 1 parameters, 0 nodes"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
