1) Removed the requirement from Zip that all sweep object should iterate the same number of times 2) Added a repeat argument to ParameterWrapper and FunctionWrapper 3) Modified tests accordingly 4) Updated example notebooks

--- a/docs/examples/sweep/sweep_basic_example.ipynb
+++ b/docs/examples/sweep/sweep_basic_example.ipynb
@@ -32,7 +32,7 @@
     "def pretty_print(dictionary): \n",
     "    \n",
     "    s = \"\"\n",
-    "    independents = \"\"\n",
+    "    independents = []\n",
     "    seperator = \"\"\n",
     "    \n",
     "    names = list(dictionary.keys())[::-1]\n",
@@ -42,9 +42,9 @@
     "        \n",
     "        if dictionary[name][\"independent_parameter\"]: \n",
     "            s += seperator + name + value\n",
-    "            independents = s\n",
+    "            independents.append(name + value)\n",
     "        else: \n",
-    "            s += seperator + name + \"({}) = {}\".format(independents, value) \n",
+    "            s += seperator + name + \"({}) = {}\".format(\",\".join(independents), value) \n",
     "        \n",
     "        seperator = \", \"\n",
     "    \n",
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "m = ManualParameter(\"m\")\n",
-    "m.get = lambda: \"{:.3}\".format(np.random.uniform(0, 1))"
+    "m.get = lambda: x() ** 2 + y()"
    ]
   },
   {
@@ -359,11 +359,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m() = 0.666\n"
+      "m() = 10\n"
      ]
     }
    ],
    "source": [
+    "x(3)\n",
+    "y(1)\n",
+    "\n",
     "for i in ParameterWrapper(m): \n",
     "    pretty_print(i)"
    ]
@@ -395,10 +398,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, x0, m(y0, x0) = 0.887\n",
-      "y0, x1, m(y0, x1) = 0.912\n",
-      "y1, x0, m(y1, x0) = 0.104\n",
-      "y1, x1, m(y1, x1) = 0.943\n"
+      "y0, x0, m(y0,x0) = 0\n",
+      "y0, x1, m(y0,x1) = 1\n",
+      "y1, x0, m(y1,x0) = 1\n",
+      "y1, x1, m(y1,x1) = 2\n"
      ]
     }
    ],
@@ -430,13 +433,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m() = 0.75, x0\n",
-      "m() = 0.75, x1\n"
+      "y0, m(y0) = 16, x0\n",
+      "y0, m(y0) = 16, x1\n",
+      "y1, m(y1) = 2, x0\n",
+      "y1, m(y1) = 2, x1\n"
      ]
     }
    ],
    "source": [
-    "for i in Nest([measurement, sox]): # Notice how \"sox\" is the inner axis\n",
+    "x(4)\n",
+    "\n",
+    "for i in Nest([soy, measurement, sox]): # Notice how \"sox\" is the inner axis\n",
     "    pretty_print(i)"
    ]
   },
@@ -444,7 +451,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here \"m()\" represents the same measurement. We thus only call \"m\" once but the result will be echoed in all subsequent lines in the measurement table."
+    "This is equivalent to: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 16 0\n",
+      "0 16 1\n",
+      "1 2 0\n",
+      "1 2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 4\n",
+    "for y in [0, 1]: \n",
+    "    m=x**2 + y\n",
+    "    for x in [0, 1]:\n",
+    "        print(y, m, x)"
    ]
   },
   {
@@ -456,60 +487,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = ManualParameter(\"x\")\n",
+    "y = ManualParameter(\"y\")\n",
+    "\n",
     "m = ManualParameter(\"m\")\n",
-    "m.get = lambda: \"{:.2}\".format(np.random.uniform(0, 1))\n",
+    "m.get = lambda: y() ** 3 - 0.1\n",
     "mm = ParameterWrapper(m)\n",
     "\n",
     "n = ManualParameter(\"n\")\n",
-    "n.get = lambda: \"{:.2}\".format(np.random.uniform(0, 1))\n",
+    "n.get = lambda: x() ** 2 + 2 * y() + 0.2\n",
     "nn = ParameterWrapper(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sox = ParameterSweep(x, lambda: [0, 1]) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m() = 0.25\n",
-      "x0, n(x0) = 0.89\n",
-      "x1, n(x1) = 0.41\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Perform measurement1 and then iterate over the sweep\n",
-    "# This is approx. equivalent to m + (x * n) \n",
-    "for i in Chain([mm, Nest([sox, nn])]): \n",
-    "    pretty_print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\"m()\" means that we measure m at undefined x or y. We can use the chaining mechanism to perform multiple loop simulataniously"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,19 +515,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, m(y0) = 0.56\n",
-      "y0, x0, n(y0, x0) = 0.039\n",
-      "y0, x1, n(y0, x1) = 0.79\n",
-      "y1, m(y1) = 0.53\n",
-      "y1, x0, n(y1, x0) = 0.58\n",
-      "y1, x1, n(y1, x1) = 0.13\n"
+      "y0, m(y0) = -0.1\n",
+      "y0, x0, n(y0,x0) = 0.2\n",
+      "y0, x1, n(y0,x1) = 1.2\n",
+      "y1, m(y1) = 0.9\n",
+      "y1, x0, n(y1,x0) = 2.2\n",
+      "y1, x1, n(y1,x1) = 3.2\n"
      ]
     }
    ],
@@ -544,62 +540,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have woven together a 1D and 2D loop. Notice that we immediately see that \"m\" only depends on y and \"n\" depends on x and y. There is no need to explicitly state this. With will become important when we discuss data sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# We will introduce a couple of conviniece functions so we do not have to be as verbose"
+    "We have woven together a 1D and 2D loop. Notice that we immediately see that \"m\" only depends on y and \"n\" depends on x and y. There is no need to explicitly state this. With will become important when we discuss data sets. The above sweep is equivalent to..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qcodes.sweep import sweep, nest, chain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sox = sweep(x, [0, 1])  # Notice we do not have to use lambda functions in the sweep\n",
-    "soy = sweep(y, [0, 1])\n",
-    "\n",
-    "m = ManualParameter(\"m\")\n",
-    "m.get = lambda: \"{:.2}\".format(np.random.uniform(0, 1))\n",
-    "\n",
-    "n = ManualParameter(\"n\")\n",
-    "n.get = lambda: \"{:.2}\".format(np.random.uniform(0, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, m(y0) = 0.73\n",
-      "y0, x0, n(y0, x0) = 0.47\n",
-      "y0, x1, n(y0, x1) = 0.27\n",
-      "y1, m(y1) = 0.011\n",
-      "y1, x0, n(y1, x0) = 0.36\n",
-      "y1, x1, n(y1, x1) = 0.93\n"
+      "0 -0.1\n",
+      "0 0 0.2\n",
+      "0 1 1.2\n",
+      "1 0.9\n",
+      "1 0 2.2\n",
+      "1 1 3.2\n"
      ]
     }
    ],
    "source": [
-    "for i in nest(soy, chain(m, nest(sox, n))):   # We do not have to wrap parameters\n",
+    "for y in [0, 1]: \n",
+    "    m = y ** 3 - 0.1\n",
+    "    print(y, m)\n",
+    "    for x in [0, 1]: \n",
+    "        n = x ** 2 + 2 * y + 0.2\n",
+    "        \n",
+    "        print(y, x, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note how the above loop is different from... "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y0, m(y0) = -0.1, x0, n(y0,x0) = 0.2\n",
+      "y0, m(y0) = -0.1, x1, n(y0,x1) = 1.2\n",
+      "y1, m(y1) = 0.9, x0, n(y1,x0) = 2.2\n",
+      "y1, m(y1) = 0.9, x1, n(y1,x1) = 3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ManualParameter(\"x\")\n",
+    "y = ManualParameter(\"y\")\n",
+    "\n",
+    "m = ManualParameter(\"m\")\n",
+    "m.get = lambda: y() ** 3 - 0.1\n",
+    "mm = ParameterWrapper(m)\n",
+    "\n",
+    "n = ManualParameter(\"n\")\n",
+    "n.get = lambda: x() ** 2 + 2 * y() + 0.2\n",
+    "nn = ParameterWrapper(n)\n",
+    "\n",
+    "sox = ParameterSweep(x, lambda: [0, 1])\n",
+    "soy = ParameterSweep(y, lambda: [0, 1])\n",
+    "\n",
+    "for i in Nest([soy, mm, sox, nn]):  # = y * m * x * n \n",
     "    pretty_print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is equivalent to..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -0.1 0 0.2\n",
+      "0 -0.1 1 1.2\n",
+      "1 0.9 0 2.2\n",
+      "1 0.9 1 3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for y in [0, 1]: \n",
+    "    m = y ** 3 - 0.1\n",
+    "    for x in [0, 1]: \n",
+    "        n = x ** 2 + 2 * y + 0.2\n",
+    "        \n",
+    "        print(y, m, x, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus although the same functions are called at the same time in the sweep, the shape of the output data is different"
    ]
   },
   {
@@ -611,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,22 +672,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x0, measurement(x0) = [ 0.55507601 -0.10745279  1.46508295]\n",
-      "x1, measurement(x1) = [ 0.12989571  0.30350761  0.36686223]\n",
-      "x2, measurement(x2) = [-0.10581962  0.39113143  1.33945185]\n",
-      "x3, measurement(x3) = [-0.33793317  0.77996067  0.1327499 ]\n"
+      "x0, measurement(x0) = [-1.31800767  0.473498   -1.24730603]\n",
+      "x1, measurement(x1) = [ 0.30383519  0.13854527  0.56536637]\n",
+      "x2, measurement(x2) = [ 0.92044549 -1.79077928  0.02910082]\n",
+      "x3, measurement(x3) = [-0.82430061  1.153619    2.07675759]\n"
      ]
     }
    ],
    "source": [
-    "for i in nest(sweep(x, [0, 1, 2, 3]), measurement_function): \n",
+    "x = ManualParameter(\"x\")\n",
+    "y = ManualParameter(\"y\")\n",
+    "\n",
+    "for i in Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)]): \n",
     "    pretty_print(i)"
    ]
   },
@@ -650,33 +703,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def setter(value): \n",
-    "    # ... some code to set the independent variable\n",
-    "    return {\"dac_channel\": {\"unit\": \"H\", \"value\": value, \"independent_parameter\": True}}"
+    "from qcodes.sweep.sweep import parameter_log_format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = ManualParameter(\"z\")\n",
+    "t.get = lambda: int(np.random.uniform(0, 100))\n",
+    "\n",
+    "def setter(value): \n",
+    "    # Do some measurement right before setting the parameter\n",
+    "    temperature = t()\n",
+    "    \n",
+    "    x.set(value)\n",
+    "    return_value = parameter_log_format(x, value, setting=True)\n",
+    "    \n",
+    "    return_value.update(parameter_log_format(t, temperature, setting=False))\n",
+    "    return return_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dac_channel0, measurement(dac_channel0) = [-0.59398484  2.02110166 -1.11809521]\n",
-      "dac_channel1, measurement(dac_channel1) = [ 0.7642435  -0.20177533 -0.31730194]\n",
-      "dac_channel2, measurement(dac_channel2) = [-0.90800159  1.46225142 -0.81558136]\n",
-      "dac_channel3, measurement(dac_channel3) = [ 0.02866496 -0.66246136  0.30246045]\n"
+      "z() = 50, x0, measurement(x0) = [-1.1072556   0.19921069 -0.57509861]\n",
+      "z() = 75, x1, measurement(x1) = [-0.72796408 -1.49406078 -1.50131129]\n",
+      "z() = 55, x2, measurement(x2) = [-0.95979363  0.42259293  0.13107023]\n",
+      "z() = 93, x3, measurement(x3) = [-1.07275228 -0.04884078  1.1439181 ]\n"
      ]
     }
    ],
    "source": [
-    "for i in nest(sweep(setter, [0, 1, 2, 3]), measurement_function): \n",
+    "for i in Nest([FunctionSweep(setter, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)]): \n",
+    "    pretty_print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z() = 88, x0, measurement(x0) = [ 0.63572752 -1.13597071 -1.72452997]\n",
+      "z() = 85, x1, measurement(x1) = [-0.7011957   2.0252928  -0.20475943]\n",
+      "z() = 1, x2, measurement(x2) = [ 0.21290209  0.81192496 -2.0021804 ]\n",
+      "z() = 8, x3, measurement(x3) = [-1.06816699 -0.53864237 -0.25798571]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in Nest([\n",
+    "    Zip([ParameterSweep(x, lambda: [0, 1, 2, 3]), ParameterWrapper(t, repeat=True)]),  \n",
+    "    FunctionWrapper(measurement_function)\n",
+    "]): \n",
     "    pretty_print(i)"
    ]
   },
@@ -689,25 +784,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dac_channel0.0, measurement(dac_channel0.0) = [ 1.32547921 -0.21213639  0.19645486]\n",
-      "dac_channel1.31, measurement(dac_channel1.31) = [-0.95784328 -0.30450607 -0.76690471]\n",
-      "dac_channel-2.03, measurement(dac_channel-2.03) = [-0.36953014  0.57696136 -2.53465172]\n",
-      "dac_channel-2.33, measurement(dac_channel-2.33) = [-1.13104468  0.55393251  0.63410781]\n",
-      "dac_channel0.057, measurement(dac_channel0.057) = [-1.37735186  0.78612939  0.06011491]\n",
-      "dac_channel-0.531, measurement(dac_channel-0.531) = [ 1.06752019 -0.46777733  0.45741794]\n",
-      "dac_channel1.06, measurement(dac_channel1.06) = [ -2.15684711e+00  -1.35221664e+00  -8.88756194e-04]\n",
-      "dac_channel-3.51, measurement(dac_channel-3.51) = [-1.07443465  0.22059757 -0.73652388]\n",
-      "dac_channel-1.59, measurement(dac_channel-1.59) = [ 2.5331431   1.25150278  1.6811127 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Measurement:\n",
     "    def __init__(self): \n",
@@ -734,7 +813,7 @@
     "def setter(value): \n",
     "    return {\"dac_channel\": {\"unit\": \"H\", \"value\": \"{:.3}\".format(value), \"independent_parameter\": True}}\n",
     "\n",
-    "for i in nest(sweep(setter, sweep_values), measurement_function): \n",
+    "for i in Nest([FunctionSweep(setter, sweep_values), FunctionWrapper(measurement_function)]): \n",
     "    pretty_print(i)"
    ]
   },
@@ -742,25 +821,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will loop until the sum of the measurement variables equal 2.0 or more. Since measurement values are three stochstics with a N(0, 1) distribution, the distribution of the sum is N(0, sqrt(3)). The probability of finding 2.0 or more: Z = 2/sqrt(3), which is equal to 12.51%. As the next cell shows, the expectation value of the number of iterations is therefore 8.3 iterations"
+    "We will loop until the sum of the measurement variables equal 2.0 or more. Since measurement values are three stochstics with a N(0, 1) distribution, the distribution of the sum is N(0, sqrt(3)). The probability of finding 2.0 or more: Z = 2/sqrt(3), which is equal to 12.51%. As the next cell shows, the expectation value of the number of iterations is therefore 8.0 iterations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.9936051159072736"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def f(ni): # The probability of looping exactly ni times \n",
     "    p = 0.1251\n",
@@ -778,22 +846,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.085\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count = 0\n",
     "N = 10000\n",
     "for _ in range(N):\n",
-    "    count += len(list(nest(sweep(setter, sweep_values), measurement_function)))\n",
+    "    count += len(list(Nest([FunctionSweep(setter, sweep_values), FunctionWrapper(measurement_function)])))\n",
     "\n",
     "print(count/N)"
    ]
