Update example notebook to use redefined min_count

--- a/docs/examples/DataSet/Pedestrian example of subscribing to a DataSet.ipynb
+++ b/docs/examples/DataSet/Pedestrian example of subscribing to a DataSet.ipynb
@@ -12,13 +12,15 @@
     "\n",
     "The subscribing function must have the following call signature:\n",
     "```\n",
-    "fun(results: List[Tuple[Value]], length: int, state: MutableSequence) -> None:\n",
+    "fun(results: List[Tuple[Value]], length: int,\n",
+    "    state: Union[MutableSequence, MutableMapping]) -> None:\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        results: A list of tuples where each tuple holds the results inserted into the dataset.\n",
     "            For two scalar parameters, X and Y, results might look like [(x1, y1), (x2, y2), ...]\n",
     "        length: The current length of the dataset.\n",
-    "        state: Any mutable sequence that can be used to hold information from call to call\n",
+    "        state: Any mutable sequence/mapping that can be used to hold information from call to call.\n",
+    "            In practice a list or a dict.\n",
     "    \"\"\"\n",
     "```\n",
     "Below we provide an example function that counts the number of times a voltage has exceeded a certain limit.\n",
@@ -95,7 +97,7 @@
     "# now perform the subscription\n",
     "# since this is important safety info, we want our callback function called\n",
     "# on EVERY insertion\n",
-    "sub_id = dataSet.subscribe(threshold_notifier, min_wait=0, min_count=0, state=[])"
+    "sub_id = dataSet.subscribe(threshold_notifier, min_wait=0, min_count=1, state=[])"
    ]
   },
   {
@@ -185,7 +187,7 @@
    },
    "outputs": [],
    "source": [
-    "sub_id = dataSet.subscribe(ASCII_plotter_5bit, min_wait=0, min_count=4, state=[])"
+    "sub_id = dataSet.subscribe(ASCII_plotter_5bit, min_wait=0, min_count=3, state=[])"
    ]
   },
   {
